# azordx-cli

./: README.md  package.json
.circleci/: config.yml
AzorDX/: .config  CMakeLists.txt
AzorDX/include/AzorDx/: client.cc  client.h  core.cc  input.cc  input.h  renderer.cc  renderer.h  resources.cc  resources.h  sound.cc  sound.h  timer.cc  timer.h
AzorDX/src/: game.cc
src/commands/: new.ts
